--- a/custom_components/vacances_scolaires/manifest.json
+++ b/custom_components/vacances_scolaires/manifest.json
@@ -10,5 +10,8 @@
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/Master13011/vacances-scolaire-HA/issues",
   "requirements": [],
-  "version": "2.0.6"
+  "version": "2.0.6",
+  "homeassistant": {
+    "min_version": "2024.12"
+  }
 }
